@@ -39,7 +39,7 @@ dunncolor
 dunnsnap
 files-tape
 gencolor
-hd
+hex
 imgdims
 loop
 lowp
