@@ -1,5 +1,5 @@
-.TH HD 1 "18 February 1989"
-.\"                           H D . 1
+.TH HEX 1 "18 February 1989"
+.\"                           H E X . 1
 .\" BRL-CAD
 .\"
 .\" Copyright (c) 2005-2007 United States Government as represented by
@@ -39,9 +39,9 @@
 .\"
 .\".\".\"
 .SH NAME
-hd \- Hexadecimal and ASCII dump
+hex \- Hexadecimal and ASCII dump
 .SH SYNOPSIS
-.B hd
+.B hex
 .I
 [
 .I \-o offset
@@ -50,14 +50,14 @@ hd \- Hexadecimal and ASCII dump
 .I file .\|.\|.
 ]
 .SH DESCRIPTION
-.I Hd
+.I Hex
 reads each
 .I file
 in sequence and
 produces a dump on the standard output
 in hexadecimal and ASCII.  If no files are specified on the command
 line,
-.I hd
+.I hex
 checks to to be sure the standard input is not comming from a terminal
 before dumping from the standard input.
 .LP
